luci-theme-design: Fix node-status-routes overflow style

--- a/themes/luci-theme-design/htdocs/luci-static/design/css/style.css
+++ b/themes/luci-theme-design/htdocs/luci-static/design/css/style.css
@@ -1586,7 +1586,7 @@ div [id*="cbi-wireless"] [id*="-__status"] table td small {
 .node-status-routes .cbi-section-node{
     max-height: 500px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 /* fix multiple table */
